Established postgre_sql connection and loaded the data in netflix database. Started with Tranformation in SQL. Following ELT.

--- a/EDA_Cleaning/EDAnetflix_churn.ipynb
+++ b/EDA_Cleaning/EDAnetflix_churn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "647cd950",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d1d3683a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a8c856f8",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2588fc74",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "4         Crypto                   2                    0.13         Action  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e05b55f7",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "(8807, 12)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ba745023",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "(5000, 14)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2c9331cf",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "582ebd1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>show_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>title</th>\n",
+       "      <th>director</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>country</th>\n",
+       "      <th>date_added</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>listed_in</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5022</th>\n",
+       "      <td>s5023</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>반드시 잡는다</td>\n",
+       "      <td>Hong-seon Kim</td>\n",
+       "      <td>Baek Yoon-sik</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>February 28, 2018</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>110 min</td>\n",
+       "      <td>Dramas, International Movies, Thrillers</td>\n",
+       "      <td>After people in his town start turning up dead...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     show_id   type    title       director           cast      country  \\\n",
+       "5022   s5023  Movie  반드시 잡는다  Hong-seon Kim  Baek Yoon-sik  South Korea   \n",
+       "\n",
+       "             date_added  release_year rating duration  \\\n",
+       "5022  February 28, 2018          2017  TV-MA  110 min   \n",
+       "\n",
+       "                                    listed_in  \\\n",
+       "5022  Dramas, International Movies, Thrillers   \n",
+       "\n",
+       "                                            description  \n",
+       "5022  After people in his town start turning up dead...  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_netflix[df_netflix.show_id=='s5023']  # seeing the title for a particular particular id not showing other foreign characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17dc5f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking the maximum length of title -- to put as char in SQL\n",
+    "max(df_netflix.title.str.len()) # 104"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e71748e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# similar checking for rating \n",
+    "max(df_netflix.rating.str.len()) # 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c070df8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# similarly checking for duration \n",
+    "max(df_netflix.duration.str.len()) # 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "0b3bdc9f",
    "metadata": {},
    "outputs": [
@@ -465,7 +615,7 @@
        "Name: type, Length: 8807, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "322c28ef",
    "metadata": {},
    "outputs": [
@@ -490,7 +640,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "aebec43d",
    "metadata": {},
    "outputs": [
@@ -513,7 +663,7 @@
        "<Axes: xlabel='type', ylabel='count'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -536,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "4a15cc38",
    "metadata": {},
    "outputs": [],
@@ -554,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "de366336",
    "metadata": {},
    "outputs": [
@@ -574,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "75a6ca5a",
    "metadata": {},
    "outputs": [],
@@ -585,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "3e6edb9f",
    "metadata": {},
    "outputs": [
@@ -595,7 +745,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -616,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b8c29fc6",
    "metadata": {},
    "outputs": [
@@ -638,7 +788,7 @@
        "Name: count, Length: 4528, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 37,
    "id": "3e6ae5a1",
    "metadata": {},
    "outputs": [],
@@ -670,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "dd33eabb",
    "metadata": {},
    "outputs": [
@@ -683,7 +833,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "id": "d8a4711c",
    "metadata": {},
    "outputs": [],
@@ -712,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "id": "1ca88c71",
    "metadata": {},
    "outputs": [
@@ -722,7 +872,7 @@
        "97.96819787985866"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "id": "ebd040d9",
    "metadata": {},
    "outputs": [
@@ -743,7 +893,7 @@
        "2.0318021201413425"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "id": "25fcb3b0",
    "metadata": {},
    "outputs": [
@@ -764,7 +914,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -786,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "115e70bd",
    "metadata": {},
    "outputs": [
@@ -802,7 +952,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 44,
    "id": "f686022e",
    "metadata": {},
    "outputs": [
@@ -824,7 +974,7 @@
        "<Axes: xlabel='country', ylabel='count'>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -845,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 45,
    "id": "36377188",
    "metadata": {},
    "outputs": [
@@ -952,7 +1102,7 @@
        "[8807 rows x 2 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 46,
    "id": "df2d1e79",
    "metadata": {},
    "outputs": [],
@@ -975,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 47,
    "id": "3dc3ab83",
    "metadata": {},
    "outputs": [
