Completed data cleaning and analysis and transformed the data. Full ELT cycle completed. Updated the Readme and Project name as well.

--- a/EDA_Cleaning/EDAnetflix_churn.ipynb
+++ b/EDA_Cleaning/EDAnetflix_churn.ipynb
@@ -551,6 +551,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7fe9d96b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "show_id            0\n",
+       "type               0\n",
+       "title              0\n",
+       "director        2634\n",
+       "cast             825\n",
+       "country          831\n",
+       "date_added        10\n",
+       "release_year       0\n",
+       "rating             4\n",
+       "duration           3\n",
+       "listed_in          0\n",
+       "description        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# seeing total number of missing values\n",
+    "df_netflix.isna().sum() # a lot of missing values in director, cast and country  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "e71748e6",
    "metadata": {},
    "outputs": [
@@ -560,7 +594,7 @@
        "8.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "2c070df8",
    "metadata": {},
    "outputs": [
@@ -582,7 +616,7 @@
        "10.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 99,
    "id": "0b3bdc9f",
    "metadata": {},
    "outputs": [
@@ -615,7 +649,7 @@
        "Name: type, Length: 8807, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 100,
    "id": "322c28ef",
    "metadata": {},
    "outputs": [
@@ -640,7 +674,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 101,
    "id": "aebec43d",
    "metadata": {},
    "outputs": [
@@ -663,7 +697,7 @@
        "<Axes: xlabel='type', ylabel='count'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -686,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 102,
    "id": "4a15cc38",
    "metadata": {},
    "outputs": [],
@@ -704,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 103,
    "id": "de366336",
    "metadata": {},
    "outputs": [
@@ -724,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 104,
    "id": "75a6ca5a",
    "metadata": {},
    "outputs": [],
@@ -735,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 105,
    "id": "3e6edb9f",
    "metadata": {},
    "outputs": [
@@ -745,7 +779,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -766,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 106,
    "id": "b8c29fc6",
    "metadata": {},
    "outputs": [
@@ -788,7 +822,7 @@
        "Name: count, Length: 4528, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 107,
    "id": "3e6ae5a1",
    "metadata": {},
    "outputs": [],
@@ -820,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 108,
    "id": "dd33eabb",
    "metadata": {},
    "outputs": [
@@ -833,7 +867,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 109,
    "id": "d8a4711c",
    "metadata": {},
    "outputs": [],
@@ -862,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 110,
    "id": "1ca88c71",
    "metadata": {},
    "outputs": [
@@ -872,7 +906,7 @@
        "97.96819787985866"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 111,
    "id": "ebd040d9",
    "metadata": {},
    "outputs": [
@@ -893,7 +927,7 @@
        "2.0318021201413425"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 112,
    "id": "25fcb3b0",
    "metadata": {},
    "outputs": [
@@ -914,7 +948,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -936,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 113,
    "id": "115e70bd",
    "metadata": {},
    "outputs": [
@@ -952,7 +986,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 114,
    "id": "f686022e",
    "metadata": {},
    "outputs": [
@@ -974,7 +1008,7 @@
        "<Axes: xlabel='country', ylabel='count'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -995,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 115,
    "id": "36377188",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1136,7 @@
        "[8807 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 116,
    "id": "df2d1e79",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 117,
    "id": "3dc3ab83",
    "metadata": {},
    "outputs": [
@@ -1139,6 +1173,14 @@
    ],
    "source": [
     "print(title_desc_dict['df_netflix[\\'title\\']'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9db7e7c",
+   "metadata": {},
+   "source": [
+    "### All the through data cleaning and analysis has been performed in Postgre SQL Netflix_ELT file "
    ]
   }
  ],
